# CursorDB

./: .gitignore  Cargo.toml  README.md
data/: data.cdb  index.cdbi
src/: cursor.rs  lib.rs  main.rs  record.rs
